add note about kanla being unmaintained

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,16 @@
 
   <hr>
 
+  <div style="border: 1px solid red; padding: 1em">
+  Note that kanla is currently unmaintained and not under active development,
+  since the main developer switched to <a href="http://prometheus.io/">Prometheus</a>, see
+  their <a
+  href="http://michael.stapelberg.de/Artikel/prometheus-blackbox-exporter/">“Prometheus:
+  Using the blackbox exporter” article</a>.
+  </div>
+
+  <hr>
+
   {{ content }}
 
   <hr>
